--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
+    <title>IBAG - Calculadora de Dízimos</title>
 </head>
 <body>
+    <div style="text-align: center;">
+        <img src="logo.png" alt="Logotipo da IBAG" style="width: 150px; height: auto">
+    </div>
     <h1>Calculadora de Dízimos - IBAG</h1>
     <p>Insira abaixo sua renda como costa em folha e a calculadora irá exibir o quanto deve ser transferido em cada competência:</p>
     <input id="brutoInput" type="number">
