--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
+    <meta property="og:image" itemprop="image" content="logo.png">
     <title>IBAG - Calculadora de Dízimos</title>
 </head>
 <body>
